--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
         <link rel="stylesheet" href="./style/css/main.css">
 
         <!-- SEO meta tags -->
+        <!-- Open-Graph -->
+        <meta name="og:title" content="Fivnex Improving Computational Understanding">
+        <meta name="og:description" content="Understanding computers/tools better with the power of science">
+        <meta name="og:type" content="website">
+        <meta name="og:url" content="https://fivnex.icu">
+        <meta name="og:locale" content="en_US">
+        <meta name="og:site_name" content="Potabi by Fivnex">
+        <meta name="theme-color" content="Fivnex Improving Computational Understanding">
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@fivnex">
     </head>
     <body>
         <!-- Nav -->
