--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a class="navbar-item" href="./more/jobs">Jobs</a>
                             <a class="navbar-item" href="./more/contact">Contact</a>
                             <hr class="navbar-divider">
-                            <a class="navbar-item">Report an issue</a>
+                            <a class="navbar-item" href="./more/issues">Report an issue</a>
                         </div>
                     </div>
                     <a class="navbar-item wrn" href="in-progress.txt">Site is incomplete</a>
